Checkout flight trip bucket improvements
We now fill the expanded flight trip bucket card on the flight checkout screen with
the actual content according to mocks.

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -192,6 +192,8 @@
     <!-- Tablet flight trip bucket -->
     <!-- Label describing this flight is a round trip flight. -->
     <string name="round_trip">Round Trip</string>
+    <!-- Label describing the total price of the flight or hotel that is going to be booked -->
+    <string name="total_with_tax">Total with tax</string>
     
     
     <!-- Tablet Checkout -->
