2427. (Phone) Actual move to checkoutV2 is happening.
I did make this all one big commit on purpose, since i thought it all ties up to make the checkout happen.
And would be a lot easier for someone to see the whole flow change. Then again I could have probably broken it down.

What's changed with new Checkout(v2):
We have to make the "create" API call before we call the new checkout.
AND everytime before we add add coupons, as well as after we remove the added coupon.

I haven't handled error cases for the "create" call. Will be making a seperate commit for that soon.

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -2004,6 +2004,8 @@
     <string name="coupon_applied">Coupon Applied</string>
     <!-- Message showing the user how much they saved by applying a coupon.  %s is a money amount, e.g. "You saved $5.00!" -->
     <string name="coupon_saved_TEMPLATE">You saved %s!</string>
+    <!-- Message shown when a coupon is being removed -->
+    <string name="coupon_removing_dialog">Removing coupon</string>
 
     <!-- Coupon Error Strings -->
     <!-- Generic error when applying coupon, but we didn't get an error code back -->
