1822: Added discount and VIP badge to hotel details fragment

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -1706,7 +1706,11 @@
     <string name="filter_vip_access">Only VIP Access Hotels</string>
 
     <!-- HotelDetailsFragmentActivity and friends -->
+    <!-- Discount percent shown in hotel results list -->
     <string name="minus_x_percent">-%2.0f%%</string>
+    <!-- Discount percent shown in hotel details fragment -->
+    <string name="x_percent_OFF_TEMPLATE">%2.0f%% OFF</string>
+    <!-- Recommended string shown in hotel details -->
     <string name="x_percent_guests_recommend">%2.0f%% of guests recommend this hotel.</string>
 
     <!-- Amenity strings -->
