--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -193,7 +193,7 @@
     <!-- Label describing this flight is a round trip flight. -->
     <string name="round_trip">Round Trip</string>
     <!-- Label describing the total price of the flight or hotel that is going to be booked -->
-    <string name="total_with_tax">Total, with tax</string>
+    <string name="total_with_tax">Total with tax</string>
     
     
     <!-- Tablet Checkout -->
