2482. Actually check out a hotel for tablet (Part1)
This commit includes getting the prep for checkout to happen next.
TabletCheckoutControllerFragment kicks off this process in ResultsTripBucketHotelFragment.
We make the hotelProduct call to get the latest pricing info, and then make the
create trip call to set things ready for checkout.

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -194,7 +194,10 @@
     <string name="round_trip">Round Trip</string>
     <!-- Label describing the total price of the flight or hotel that is going to be booked -->
     <string name="total_with_tax">Total with tax</string>
-    
+
+    <!-- Tablet hotel trip bucket -->
+    <!-- Progress dialog text while creating a trip -->
+    <string name="spinner_text_hotel_create_trip">Creating the trip ...</string>
     
     <!-- Tablet Checkout -->
     <!-- Your Trip -->
