Address locale concern.
Basically the loading animation has some really nice text animations when we go from loading both hotels and flights to just hotels or just flights.
To accomplish these animations, we have our text split up into multiple textviews. This works fine for english, but will be aweful for languages
with different sentence structuring. So (for now) we remove any text animations for our non-english poses, but still display the appropriate loading message.

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -106,6 +106,9 @@
     <string name="actionbar_tablet_results_hotels_title_TEMPLATE">%1$s Hotels</string>
     <!-- Label for VIP badge -->
     <string name="VIP">VIP</string>
+    <!-- Loading Hotels and Flights... -->
+    <string name="loading_hotels_and_flights">Loading Hotels and Flights&#8230;</string>
+
 
     <!-- Tablet hotel filters -->
     <!-- "Sort By" section header -->
