2522.Checkout V2 error handling - Hotels (Part 1)
We can unify the error handling for both flights and hotels.
This is the first part of the refactoring which readies things to be used and unified in the next commit.
Also (important) this takes care of the SESSION_TIMEOUT error for hotels, by showing an appropriate pop
and asking the user to choose another hotel again. (Previously it was pointing to flights error dialog - Fixed)

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -1483,6 +1483,12 @@
     <!-- Button label imploring users to pick flights due to unavailability -->
     <string name="pick_new_flights">Pick New Flights</string>
 
+    <!-- Hotel booking dialog errors -->
+    <!-- Error shown to user if their hotel is no longer available (sold out, session expired, whatever) -->
+    <string name="error_hotel_no_longer_available">We\'re really sorry, your hold on this room has expired</string>
+    <!-- Button label imploring users to pick a new hotel room due to unavailability -->
+    <string name="pick_new_hotel">Pick a New Hotel</string>
+
     <!-- Credit card input section -->
     <string name="one">1</string>
     <string name="two">2</string>
