--- a/tests/res/values/strings.xml
+++ b/tests/res/values/strings.xml
@@ -2,4 +2,8 @@
 <resources>
     <string name="hello">Hello World!</string>
     <string name="app_name">ExpediaBookingTest</string>
+
+    <string name="user_name">qa-ehcc@mobiata.com</string>
+    <string name="user_password">3xp3d1acc</string>
+
 </resources>
