--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -3040,4 +3040,20 @@
     <!-- Content description for Flight Search Results -->
     <string name="cd_tablet_results_flight_list">Flight Search Results</string>
 
+    <!-- Tablet Confirmation Screen -->
+    <!-- Header text to indicating booking confirmed for hotel -->
+    <string name="tablet_confirmation_hotel_booked">Your hotel is booked!</string>
+    <!-- Summary text for booked hotel %1$s is hotel name, %2$s is start-end date, %4$s is no of guests-->
+    <string name="tablet_confirmation_summary">%1$s, %2$s for %3$s</string>
+    <!-- Itinerary summary text %1$s is ItineraryNumber, %2$s is user email -->
+    <string name="tablet_itinerary_confirmation_TEMPLATE">Itinerary #%1$s sent to %2$s</string>
+    <!-- Share button text -->
+    <string name="tablet_confirmation_share">Share Stay</string>
+    <!-- Call support button text -->
+    <string name="tablet_confirmation_call_support">Call Support</string>
+    <!-- Book Next Item button text -->
+    <string name="tablet_confirmation_book_next">Book Next Item</string>
+    <!-- Done Booking button text -->
+    <string name="tablet_confirmation_done_booking">Done Booking</string>
+
 </resources>
